# oden

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Flow.md  HOW_TO_RUN.md  LICENSE  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_NOTICE.md  attachment_handler.py  config.ini  config.ini.example  config.ini.template  config.py  docker-compose.yml  formatting.py  ideas.md  install_mac.sh  install_windows.ps1  link_formatter.py  processing.py  pyproject.toml  s7_watcher.py  s7_watcher.spec  signal_manager.py  test_formatting.py  test_processing.py  test_s7_watcher.py
.github/: CODEOWNERS  copilot-instructions.md  settings.yml
.github/workflows/: python-test.yml  release.yml
docs/: FEATURES.md  Flow.md  HOW_TO_RUN.md  REPORT_TEMPLATE.md  SETUP_FLOW.md  WEB_GUI.md
images/: oden.icns
oden/: __init__.py  __main__.py  app_state.py  attachment_handler.py  bundle_utils.py  config.py  config_db.py  formatting.py  link_formatter.py  log_buffer.py  log_utils.py  path_utils.py  processing.py  s7_watcher.py  signal_manager.py  template_loader.py  tray.py  web_server.py  web_templates.py
oden/templates/web/: base.html  dashboard.html  setup.html
oden/templates/web/css/: base.css  dashboard.css  setup.css
oden/templates/web/js/: dashboard.js  setup.js
oden/templates/web/js/dashboard/: config.js  dirty-tracking.js  groups.js  init.js  invitations.js  logs.js  regex.js  responses.js  shared.js  tabs.js  templates.js
oden/web_handlers/: __init__.py  config_handlers.py  group_handlers.py  response_handlers.py  setup_handlers.py  template_handlers.py
responses/: help.md  hjälp.md  ok.md
scripts/: build_universal_dmg.sh  generate_dmg_background.py  generate_icon.py  install_linux.sh  install_mac.sh  install_snapshot_mac.sh  install_windows.ps1  run_linux.sh  run_mac.sh  run_windows.ps1
templates/: append.md.j2  report.md.j2
tests/: __init__.py  test_config_db.py  test_formatting.py  test_path_utils.py  test_processing.py  test_s7_watcher.py  test_security.py  test_web_gui.py
tests/fixtures/: gui_sample_data.json
