[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oden"
version = "0.0.4"
description = "Signal to Obsidian bridge - receives Signal messages and saves them as Markdown files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["signal", "obsidian", "markdown", "messaging"]

[project.scripts]
oden = "oden.s7_watcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oden*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
