[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oden"
version = "0.3.0"
description = "Signal to Obsidian bridge - receives Signal messages and saves them as Markdown files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["signal", "obsidian", "markdown", "messaging"]

[project.scripts]
oden = "oden.s7_watcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oden*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["oden", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["oden"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
packages = ["oden"]

[tool.coverage.run]
source = ["oden"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
